@@ -1,6 +1,7 @@
 Revision history for Open-This
 
 {{$NEXT}}
+    - to_editor_args() now accepts an array
 
 0.000004  2018-02-08 19:06:09Z
     - Try to fix some tests when running under MSWin32
